<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Your Total is 0</string>
    <string name="app_name">The New Boston</string>
    <string name="bAdd">Add One</string>
    <string name="bSub">Subtract One</string>
    <string name="hinEtCommands">Type a command</string>
    <string name="txtBResults">Try Command</string>
    <string name="txtTbPassword">ToggleButton</string>
    <string name="invalid">invalid</string>

</resources>