<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background" >

    <EditText
        android:id="@+id/etCommands"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hinEtCommands"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100" >
        
        <Button
            android:id="@+id/bResults"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="20"
            android:text="@string/txtBResults" />

        <ToggleButton
            android:id="@+id/tbPassword"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="80"
            android:text="@string/txtTbPassword"
            android:checked="true" />
    </LinearLayout>

    <TextView
        android:id="@+id/tResults"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/invalid"
        android:textSize="30dp" />

</LinearLayout>