<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="20dp"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/hello"
        android:textSize="40dp" />

    <Button
        android:id="@+id/bAdd"
        android:layout_width="173dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/bAdd" />

    <Button
        android:id="@+id/bSub"
        android:layout_width="173dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/bSub" />

</LinearLayout>